# rust-labeler

./: .gitignore  README.md
src/: index.html
src-tauri/: .gitignore  Cargo.toml  settings.json  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/css/: styles.css
src/js/: main.js
