[package]
name = "rust-labeler"
version = "0.1.0"
description = "A simple app made with tauri in rust for labeling images"
authors = ["cenek@potuznik.dev"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rust_labeler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hyper-tls = "0.6.0"
image = "0.25.5"
base64 = "0.22.1"
tauri-plugin-dialog = "2"

